# rdk-libunpriv

./: CHANGELOG.md  Makefile.am  NOTICE  README.md  configure.ac
.github/: CODEOWNERS
.github/workflows/: L1-tests.yml
source/: Makefile.am  cap.c  cap.h  process-capabilities_broadband.json  process-capabilities_video.json  utility.cpp  utility.h
source/test/: Makefile.am  gtest_main.cpp  libunpriv_test.cpp
source/test/mocks/: CapMock.cpp  CapMock.h
test/: run_ut.sh
